test/classes/generic/varOverBadGeneric.good
varOverBadGeneric.chpl:12: error: Cannot default-initialize a variable with generic type
varOverBadGeneric.chpl:12: note: 'not-fully-instantiated' has generic type 'C'
